--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="loading_text_section">
             <h1 class='we_text'></h1>
             <div class="loading_anim_text_layer">
-                <h1>Blockchain Gaming</h1>
+                <h1>WEB3 P2E</h1>
                 <h1>Meets</h1>
                 <h1>X</h1>
             </div>
